monitoring/loki-stack/loki-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: loki-stack
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - loki.vanillax.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki-gateway
          port: 80
